fix text to fit border radius on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -48,8 +48,8 @@ body{
     font-weight: bold;
     background-color: #CCCCCC;
     text-align: center;
-    border-radius: 192px;
-    padding: 100px;
+    border-radius: 100px;
+    padding: 50px;
 }
 
 .rodape{
